--- a/web/src/styles/Header.css
+++ b/web/src/styles/Header.css
@@ -1,6 +1,5 @@
 /* Header.module.css */
 .headerContainer {
-    all: initial; 
     font-family: sans-serif;
     width: 100%;
     display: block;
